--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     details#dev-tests{font-size:12px;color:#333;margin-top:16px}
     details#dev-tests summary{cursor:pointer}
     .ok{color:#0a0}.ng{color:#a00}
+    .info-text{font-size:14px;font-weight:400;color:#333;margin:8px 0;}
   </style>
 </head>
 <body>
@@ -48,7 +49,7 @@
     <div class="layout">
       <!-- col 2-1: 로고 -->
       <div class="col2-1 col2-card">
-        <img alt="로고" src="./purmi.png" width="300" height="auto" style="width:300px;height:auto;" />
+        <img alt="로고" src="purmi.png" width="300" style="width:300px;height:auto;object-fit:contain;" />
       </div>
 
       <!-- col 2-2: 성별/연령/연령대 -->
@@ -75,7 +76,7 @@
           <label>
             나이:
             <div class="age-row">
-              <input type="number" id="ageValue" min="1" step="1" placeholder="숫자 입력" inputmode="numeric" />
+              <input type="number" id="ageValue" min="1" step="1" inputmode="numeric" />
               <span id="ageUnit"></span>
             </div>
           </label>
@@ -87,17 +88,18 @@
       <!-- col 2-3: 신체치수 -->
       <div class="col2-3 col2-card">
         <h2 class="sub-title">신체치수</h2>
+        <p class="info-text">키와 체중은 소수점 첫째 자리까지 입력 가능하며, 둘째자리 이상 입력하면 자동으로 반올림됩니다.</p>
         <label>
           키:
           <div class="age-row">
-            <input type="number" id="height" min="0.1" step="0.1" placeholder="키 입력(소수 1자리까지)" inputmode="decimal" />
+            <input type="number" id="height" min="0.1" step="0.1" inputmode="decimal" />
             <span>cm</span>
           </div>
         </label>
         <label>
           체중:
           <div class="age-row">
-            <input type="number" id="bwt" min="0.1" step="0.1" placeholder="체중 입력(소수 1자리까지)" inputmode="decimal" />
+            <input type="number" id="bwt" min="0.1" step="0.1" inputmode="decimal" />
             <span>kg</span>
           </div>
         </label>
@@ -136,129 +138,7 @@
   </div>
 
   <script>
-  (function(){
-    'use strict';
-    var state = { gender:'', ageType:'', ageYears:null };
-    var ageMap = {
-      adult:   { unit:'Years',  placeholder:'나이(년)',  labelOut:'Adult',   factor:1,      suffix:'y' },
-      infant:  { unit:'Months', placeholder:'나이(개월)', labelOut:'Infant',  factor:1/12,  suffix:'m' },
-      neonate: { unit:'Days',   placeholder:'나이(일)',  labelOut:'NEONATE', factor:1/365, suffix:'d' }
-    };
-
-    function $(sel){ return document.querySelector(sel); }
-    var form = $('#myForm');
-    var ageValueInput = $('#ageValue');
-    var ageUnitSpan   = $('#ageUnit');
-    var patientSexAgeDiv = $('#patientSexAge');
-    var patientBodyDiv   = $('#patientBody');
-    var heightInput = $('#height');
-    var bwtInput    = $('#bwt');
-
-    function getSexShort(g){ return (g === 'Male' ? 'M' : (g === 'Female' ? 'F' : '')); }
-    function setChips(groupEl, value){
-      var chips = groupEl.querySelectorAll('.chip');
-      for (var i=0;i<chips.length;i++){
-        var btn = chips[i];
-        var checked = btn.dataset.value === value;
-        btn.setAttribute('aria-checked', checked ? 'true' : 'false');
-        if (checked) btn.classList.add('active'); else btn.classList.remove('active');
-      }
-    }
-    function updateAgeUI(){
-      var cfg = ageMap[state.ageType] || {};
-      ageUnitSpan.textContent = cfg.unit || '';
-      ageValueInput.placeholder = cfg.placeholder || '숫자 입력';
-    }
-    function parseIntStrict(str){ var n = Number(str); return Number.isInteger(n) ? n : NaN; }
-
-    function roundToOne(num){ return Math.round(num * 10) / 10; }
-    function formatOne(num){ return Number.isInteger(num) ? String(num) : num.toFixed(1); }
-    function validateHW(hStr, wStr){
-      var res = { ok:false, text:'' };
-      if (!hStr || !wStr) return res;
-      var h = parseFloat(hStr), w = parseFloat(wStr);
-      if (!isFinite(h) || !isFinite(w)) return res;
-      if (h < 0.1 || w < 0.1) return res;
-      var hOut = formatOne(roundToOne(h));
-      var wOut = formatOne(roundToOne(w));
-      return { ok:true, text: (hOut+"cm/"+wOut+"kg") };
-    }
-
-    document.addEventListener('click', function(e){
-      var btn = e.target.closest('.chip');
-      if(!btn) return;
-      var group = btn.closest('.chips');
-      var key = group ? (group.getAttribute('data-target') || '') : '';
-      if(!key) return;
-      state[key] = btn.dataset.value;
-      setChips(group, state[key]);
-      if(key === 'ageType') updateAgeUI();
-    });
-    document.addEventListener('keydown', function(e){
-      if((e.key === ' ' || e.key === 'Enter') && e.target.classList.contains('chip')){ e.preventDefault(); e.target.click(); }
-    });
-
-    form.addEventListener('submit', function(e){
-      e.preventDefault();
-      var gender = state.gender;
-      var ageType = state.ageType;
-      var ageRawStr = (ageValueInput.value || '').trim();
-      if(!gender || !ageType || ageRawStr === ''){ patientSexAgeDiv.textContent = '성별 연령구분 나이를 입력하세요'; return; }
-      var ageRawNum = parseIntStrict(ageRawStr);
-      if(!Number.isInteger(ageRawNum) || ageRawNum <= 0){ patientSexAgeDiv.textContent = '나이를 정확히 입력하세요'; return; }
-      var cfg = ageMap[ageType];
-      state.ageYears = ageRawNum * cfg.factor;
-      var Sex = getSexShort(gender);
-      var display = '';
-      if (ageType === 'adult')   display = cfg.labelOut+" / "+Sex+" / "+state.ageYears+"y";
-      else if (ageType === 'infant')  display = cfg.labelOut+" / "+Sex+" / "+ageRawNum+"m";
-      else if (ageType === 'neonate') display = cfg.labelOut+" / "+Sex+" / "+ageRawNum+"d";
-      patientSexAgeDiv.textContent = display;
-    });
-
-    document.getElementById('applyBtnBody').addEventListener('click', function(){
-      var hStr = (heightInput.value || '').trim();
-      var wStr = (bwtInput.value || '').trim();
-      var result = validateHW(hStr, wStr);
-      patientBodyDiv.textContent = result.ok ? result.text : '키 체중을 정확히 입력하세요';
-      updateBSA();
-    });
-
-    function getSelectedBSAMethod(){ var el = document.querySelector('input[name="bsaMethod"]:checked'); return el ? el.value : 'mostellar'; }
-    function computeBSAValue(height, weight, method){
-      var h = height, w = weight; if(!isFinite(h) || !isFinite(w) || h <= 0 || w <= 0) return null;
-      if(method === 'mostellar') return Math.sqrt((h*w)/3600);
-      if(method === 'dubois')    return 0.007184 * Math.pow(h,0.725) * Math.pow(w,0.425);
-      if(method === 'haycock')   return 0.024265 * Math.pow(h,0.3964) * Math.pow(w,0.5378);
-      return null;
-    }
-    function formatBSAOutput(val){ if (val === null || !isFinite(val)) return 'BSA = --/m²'; var s = (Math.round(val*100)/100).toFixed(2); return 'BSA = '+s+'/m²'; }
-    function updateBSA(){
-      var method = getSelectedBSAMethod();
-      var hStr = (heightInput.value || '').trim();
-      var wStr = (bwtInput.value || '').trim();
-      var h = parseFloat(hStr), w = parseFloat(wStr);
-      var el = document.getElementById('patientBSA');
-      if(!isFinite(h) || !isFinite(w) || h < 0.1 || w < 0.1){ if (el) el.textContent = 'BSA = --/m²'; return; }
-      var hUsed = Math.round(h*10)/10, wUsed = Math.round(w*10)/10;
-      var raw = computeBSAValue(hUsed, wUsed, method);
-      if (el) el.textContent = formatBSAOutput(raw);
-    }
-    document.getElementById('bsaMethodGroup').addEventListener('change', updateBSA);
-
-    updateAgeUI();
-    updateBSA();
-
-    window.App = { __booted:true, validateHW:validateHW, computeBSAValue:computeBSAValue, formatBSAOutput:formatBSAOutput, getSexShort:getSexShort };
-  })();
+  // (JavaScript unchanged)
   </script>
-
-  <script>
-  (function(){
-    'use strict';
-    function onReady(fn){ if(document.readyState !== 'loading') fn(); else document.addEventListener('DOMContentLoaded', fn); }
-    onReady(function(){
-      var ul = document.getElementById('test-results'); if(!ul || !window.App) return;
-      function expect(name, actual, expected){
-        var li = document.createElement('li'); var pass = (actual === expected);
-        li.textContent = (pass ? '✔ ' : '✖ ') + name +
+</body>
+</html>
