--- a/index.html
+++ b/index.html
@@ -4,39 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sejong Anesthesiology Calculator</title>
-  <style>
-    :root{--title-bg:#0052cc;--title-fg:#fff;--meta-fg:#c9d6ff;--card-bg:#fff;--card-bd:#ccc;--page-bg:#f2f2f2}
-    html,body{height:100%}
-    body{font-family:Arial, sans-serif;margin:40px 0;background:var(--page-bg)}
-    .container{width:1600px;margin:0 auto}
-    .title-box{font-size:28px;font-weight:700;background:var(--title-bg);color:var(--title-fg);padding:12px 16px;display:flex;align-items:center;justify-content:flex-start}
-    .sub-title{margin:0 0 12px 0;font-size:20px;font-weight:700;background:var(--title-bg);color:var(--title-fg);padding:6px 10px}
-    .top-layout{display:grid;grid-template-columns:1fr 1fr;gap:0;margin-bottom:24px}
-    .col1-2{background:var(--title-bg);color:var(--meta-fg);text-align:right;padding:12px 16px;font-size:12px;display:flex;flex-direction:column;justify-content:center;line-height:1.35}
-    .layout{display:grid;grid-template-columns:369px 1fr 1fr 1fr 1fr;gap:16px;margin-bottom:24px}
-    .col2-card{background:var(--card-bg);border:1px solid var(--card-bd);border-radius:6px;padding:16px}
-    .col2-1 img{width:300px;height:auto;display:block;object-fit:contain}
-    label{display:flex;align-items:center;justify-content:space-between;margin-top:12px;font-weight:600}
-    .age-row{display:flex;align-items:center;gap:8px}
-    input[type=number]{width:50%;padding:6px;margin-left:10px}
-    .chips{display:flex;gap:8px}
-    .chips.left{justify-content:flex-start}
-    .chips.right{justify-content:flex-end}
-    .chip{border:1px solid #888;padding:6px 12px;border-radius:999px;background:#fff;cursor:pointer;user-select:none}
-    .chip[aria-checked=true],.chip.active{background:#1976d2;color:#fff;border-color:#1976d2}
-    .apply-btn{margin:20px auto 0;display:block;width:120px;padding:6px 10px;font-size:14px;cursor:pointer}
-    .patient-info-line{margin-top:8px;font-size:16px;font-weight:600;white-space:pre-line}
-    .radio-group{display:flex;gap:12px;align-items:center;margin-top:8px;flex-wrap:wrap}
-    .radio-item{display:flex;align-items:center;gap:6px;font-weight:600}
-    details#dev-tests{font-size:12px;color:#333;margin-top:16px}
-    details#dev-tests summary{cursor:pointer}
-    .ok{color:#0a0}.ng{color:#a00}
-    .info-text{font-size:14px;font-weight:400;color:#333;margin:8px 0;}
-  </style>
+  <link rel="stylesheet" href="assets/css/style.min.css" />
 </head>
 <body>
   <div class="container">
-    <!-- 상단 타이틀 2컬럼 -->
     <div class="top-layout">
       <div class="title-box">Sejong Anesthesiology Calculator</div>
       <div class="col1-2">
@@ -45,7 +16,6 @@
       </div>
     </div>
 
-    <!-- 상단 5컬럼 -->
     <div class="layout">
       <!-- col 2-1: 로고 -->
       <div class="col2-1 col2-card">
@@ -56,31 +26,40 @@
       <div class="col2-2 col2-card">
         <h2 class="sub-title">성별, 연령, 연령대</h2>
         <form id="myForm" novalidate>
-          <label>
-            성별:
-            <div class="chips right" data-target="gender" role="radiogroup" aria-label="성별 선택">
-              <button type="button" class="chip" data-value="Male" role="radio" aria-checked="false">Male</button>
-              <button type="button" class="chip" data-value="Female" role="radio" aria-checked="false">Female</button>
-            </div>
-          </label>
-
-          <label>
-            연령 구분:
-            <div class="chips left" data-target="ageType" role="radiogroup" aria-label="연령 구분 선택">
-              <button type="button" class="chip" data-value="adult" role="radio" aria-checked="false">Adult</button>
-              <button type="button" class="chip" data-value="infant" role="radio" aria-checked="false">Infant</button>
-              <button type="button" class="chip" data-value="neonate" role="radio" aria-checked="false">Neonate</button>
-            </div>
-          </label>
-
-          <label>
-            나이:
-            <div class="age-row">
-              <input type="number" id="ageValue" min="1" step="1" inputmode="numeric" />
-              <span id="ageUnit"></span>
-            </div>
-          </label>
-
+          <table class="form-table">
+            <colgroup>
+              <col style="width:30%">
+              <col style="width:70%">
+            </colgroup>
+            <tr>
+              <td class="label-cell">성별</td>
+              <td>
+                <div class="chips" data-target="gender" role="radiogroup" aria-label="성별 선택">
+                  <button type="button" class="chip" data-value="Male" role="radio" aria-checked="false">Male</button>
+                  <button type="button" class="chip" data-value="Female" role="radio" aria-checked="false">Female</button>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td class="label-cell">연령<br>구분</td>
+              <td>
+                <div class="chips" data-target="ageType" role="radiogroup" aria-label="연령 구분 선택">
+                  <button type="button" class="chip" data-value="adult" role="radio" aria-checked="false">Adult</button><br>
+                  <button type="button" class="chip" data-value="infant" role="radio" aria-checked="false">Infant</button>
+                  <button type="button" class="chip" data-value="neonate" role="radio" aria-checked="false">Neonate</button>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td class="label-cell">나이</td>
+              <td>
+                <div class="age-row">
+                  <input type="number" id="ageValue" min="1" step="1" inputmode="numeric" />
+                  <span id="ageUnit"></span>
+                </div>
+              </td>
+            </tr>
+          </table>
           <button type="submit" class="apply-btn">적용</button>
         </form>
       </div>
@@ -88,22 +67,10 @@
       <!-- col 2-3: 신체치수 -->
       <div class="col2-3 col2-card">
         <h2 class="sub-title">신체치수</h2>
-        <p class="info-text">키와 체중은 소수점 첫째 자리까지 입력 가능하며, 둘째자리 이상 입력하면 자동으로 반올림됩니다.</p>
-        <label>
-          키:
-          <div class="age-row">
-            <input type="number" id="height" min="0.1" step="0.1" inputmode="decimal" />
-            <span>cm</span>
-          </div>
-        </label>
-        <label>
-          체중:
-          <div class="age-row">
-            <input type="number" id="bwt" min="0.1" step="0.1" inputmode="decimal" />
-            <span>kg</span>
-          </div>
-        </label>
+        <label>키<div class="age-row"><input type="number" id="height" min="0.1" step="0.1" inputmode="decimal" /><span>cm</span></div></label>
+        <label>체중<div class="age-row"><input type="number" id="bwt" min="0.1" step="0.1" inputmode="decimal" /><span>kg</span></div></label>
         <button type="button" id="applyBtnBody" class="apply-btn">적용</button>
+        <div class="info-text">키, 체중은 소수점 첫째 자리까지 가능<br>둘쨰 자리 이상 입력하면<br>자동으로 반올림 처리됩니다.</div>
       </div>
 
       <!-- col 2-4: 환자정보 -->
@@ -120,25 +87,21 @@
         <div id="patientBSA" class="patient-info-line"></div>
       </div>
 
-      <!-- col 2-5: 여분 영역 -->
+      <!-- col 2-5: 추가 영역 -->
       <div class="col2-5 col2-card">
         <h2 class="sub-title">col 2-5</h2>
         <p>추가 영역</p>
       </div>
     </div>
 
-    <!-- col 3-0: Acting Information -->
     <div class="title-box">Acting Information</div>
 
-    <!-- 개발용 테스트 -->
     <details id="dev-tests">
       <summary>개발용 테스트 보기</summary>
       <ul id="test-results"></ul>
     </details>
   </div>
 
-  <script>
-  // (JavaScript unchanged)
-  </script>
+  <script src="assets/js/app.min.js"></script>
 </body>
 </html>
