index.html 파일의 타이틀을 수정하고, 버전 정보를 업데이트했습니다. 또한, CSS 그리드 레이아웃을 조정하고, JavaScript에서 iframe 스타일을 개선하여 사용자 경험을 향상시켰습니다.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <div class="container">
     <!-- 상단 타이틀 2컬럼 -->
     <div class="grid-2-cols">
-      <div class="title-bar">Sejong Anesthesiology Calculator</div>
+      <div class="title-bar">Sejong Anesthesiology Calculator (Under Development)</div>
       <div class="version-info">
-        <div>Ver. 0.1 Build 2509-0021</div>
-        <div>2025/09/13 · Dr. Min</div>
+        <div>Ver. 0.1 Build 2509-0025</div>
+        <div>2025/09/15 · Anesthesiology Dr. Min</div>
       </div>
     </div>
 
@@ -32,10 +32,10 @@
       <div class="card">
         <h2 class="card-header">성별, 연령, 연령대</h2>
         <form id="myForm" novalidate>
-          <table class="form-table" style="width:400px;table-layout:fixed;">
+          <table class="form-table">
             <colgroup>
-              <col style="width:30%" />
-              <col style="width:70%" />
+              <col style="width:20%" />
+              <col style="width:80%" />
             </colgroup>
 
             <!-- 행 1: 성별 -->
@@ -134,11 +134,10 @@
         </div>
       </div>
     </div>
-
-    <!-- 동적 컨텐츠 컨테이너 -->
-    <div id="dynamic-content-container">
-      <!-- 모든 동적 컨텐츠가 여기에 로드됨 -->
-    </div>
+  </div>
+  <!-- 동적 컨텐츠 컨테이너 -->
+  <div id="dynamic-content-container">
+        <!-- 모든 동적 컨텐츠가 여기에 로드됨 -->
   </div>
 
   <script>
