index.html 파일의 상단 타이틀을 2컬럼에서 1줄 테이블 형식으로 변경하고, CSS에서 ne_calc.html iframe의 여백을 제거했습니다. 또한, dose-unit 클래스의 폰트 크기를 18px로 조정하고, 동적 콘텐츠 및 iframe 스타일을 개선하여 사용자 경험을 향상시켰습니다.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 
 <body>
   <div class="container">
-    <!-- 상단 타이틀 2컬럼 -->
-    <div class="grid-2-cols">
-      <div class="title-bar">Sejong Anesthesiology Calculator (Under Development)</div>
-      <div class="version-info">
-        <div>Ver. 0.1 Build 2509-0025</div>
-        <div>2025/09/15 · Anesthesiology Dr. Min</div>
-      </div>
-    </div>
+    <!-- 상단 타이틀 한 줄 -->
+    <table style="width:1200px; border:none; border-collapse:collapse; margin-bottom:24px;">
+      <tr>
+        <td class="title-bar" style="width:70%;">Sejong Anesthesiology Calculator (Under Development)</td>
+        <td class="version-info" style="width:30%;">
+          <div>Ver. 0.1 Build 2509-0025</div>
+          <div>2025/09/15 · Anesthesiology Dr. Min</div>
+        </td>
+      </tr>
+    </table>
 
     <!-- 상단 5컬럼 -->
     <div class="grid-5-cols">
