새로운 Dopamine Calculator를 추가하고, content-config.js에 해당 내용을 반영했습니다. dopa_calc.html 파일을 생성하여 계산기 기능을 구현하였으며, main.js에서 데이터 동기화 기능을 추가했습니다. CSS 스타일을 개선하여 사용자 인터페이스를 향상시켰습니다.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sejong Anesthesiology Calculator</title>
   
   <link rel="stylesheet" href="main.css" />
@@ -13,10 +12,10 @@
 <body>
   <div class="container">
     <!-- 상단 타이틀 한 줄 -->
-    <table style="width:1200px; border:none; border-collapse:collapse; margin-bottom:24px;">
+    <table class="title-table">
       <tr>
-        <td class="title-bar" style="width:70%;">Sejong Anesthesiology Calculator (Under Development)</td>
-        <td class="version-info" style="width:30%;">
+        <td class="title-bar title-cell">Sejong Anesthesiology Calculator (Under Development)</td>
+        <td class="version-info version-cell">
           <div>Ver. 0.1 Build 2509-0025</div>
           <div>2025/09/15 · Anesthesiology Dr. Min</div>
         </td>
@@ -26,7 +25,7 @@
     <!-- 상단 5컬럼 -->
     <div class="grid-5-cols">
       <!-- col 2-1: 로고 -->
-      <div class="card" style="width:200px;">
+      <div class="card logo-card">
         <img alt="로고" src="purmi.png" class="logo" />
       </div>
 
@@ -36,8 +35,8 @@
         <form id="myForm" novalidate>
           <table class="form-table">
             <colgroup>
-              <col style="width:20%" />
-              <col style="width:80%" />
+              <col class="col-narrow" />
+              <col class="col-wide" />
             </colgroup>
 
             <!-- 행 1: 성별 -->
