index.html 파일의 타이틀을 'Sejong Anesthesiology Calculator'에서 'SJH Anesthesiology Calculator'로 변경하여 브랜드 명칭을 업데이트했습니다.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>Sejong Anesthesiology Calculator</title>
+  <title>SJH Anesthesiology Calculator</title>
   
   <link rel="stylesheet" href="main.css" />
   <script src="content-config.js"></script>
